Small UI Tweaks

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -51,7 +51,7 @@
         }
 
         &-title {
-            font-family: $title-font;
+            font-family: $bold-font;
             letter-spacing: 0.05em;
             text-decoration: none;
             line-height: $height;
