--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -56,7 +56,7 @@ $mid: #ccc;
 $mid-dark: #bbb;
 $dark: #222;
 
-$title-font: 'Bungee Inline', sans-serif;
+$title-font: 'Frank Ruhl Libre', serif;
 $light-font: 'Varela Round', sans-serif;
 $icon-font: "Material Icons", sans-serif;
 $regular-font: "Roboto", sans-serif;
