--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -97,7 +97,13 @@
 
       @media (min-width: 1000px) {
          .layer-title {
-            font-size: 105px;
+            font-size: 12vw;
+         }
+      }
+
+      @media (min-width: 1600px) {
+         .layer-title {
+            font-size: 220px;
          }
       }
    }
