--- a/views/app.pug
+++ b/views/app.pug
@@ -33,8 +33,9 @@ html(lang="en")
     meta(name='msapplication-TileColor', content='#4500ff')
     meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
+    link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
-    link(rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
@@ -99,7 +100,7 @@ html(lang="en")
 
     //- link(rel='preconnect' href='https://polyfill.io/v3/')
     //- link(rel='dns-prefetch' href='https://fonts.googleapis.com')
-    //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Bungee+Inline|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
+    //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:500,900|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
 
     title= page.title
 
