--- a/views/app.pug
+++ b/views/app.pug
@@ -176,7 +176,7 @@ html(lang="en")
     else
       section.layer.layer-dark
         article.layout-contain
-          section.layout.layout-shorten.layer-overflow-hide.layer-max-height.layout-flex.layout-align-items-center.layout-justify-content-start
+          section.layout.layout-shorten.layer-overflow-hide.layout-max-height.layout-flex.layout-align-items-center.layout-justify-content-start
             section
               h3.style-secondary-dark.style-font-title.style-uppercase.layout-margin-dull-vert.layout-padding-vert-mini Joseph
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
