--- a/views/app.pug
+++ b/views/app.pug
@@ -111,7 +111,8 @@ html(lang="en")
     include ./components/hero.pug
     include ./components/footer.pug
   body
-    if dev
+    //- dev
+    if true
       //- Navbar etc...
       +header(page)
 
