--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,4 @@
 /* -- Header -- */
-
 .header {
    $height: 60px;
 
@@ -85,11 +84,6 @@
             color: $black;
             width: 100%;
 
-            &:hover {
-                text-decoration: none;
-                color: $black;
-            }
-
             &:before {
                 transition: transform .25s cubic-bezier(.25,.46,.45,.94);
                 transform: translateY($height - 12px) scaleX(0);
@@ -104,6 +98,16 @@
                 height: 2.5px;
                 width: 100%;
                 content: "";
+            }
+
+            &:hover {
+                text-decoration: none;
+                color: $black;
+
+                &:before {
+                    transform: translateY($height - 12px) scaleX(1);
+                    transform-origin: 0 50%;
+                }
             }
 
             &-focus {
@@ -169,27 +173,26 @@
                 line-height: $height - 12px;
                 padding: 0 24px;
 
-                &:before {
-                    transition: transform .25s cubic-bezier(.25,.46,.45,.94);
-                    transform: translateY($height / 2) scaleX(0);
-                    border: 1px solid transparent;
-                    transform-origin: 100% 50%;
-                    background-color: $primary;
-                    will-change: transform;
-                    transition-delay: 70ms;
-                    border-radius: 10px;
-                    max-width: 80px;
-                    display: block;
-                    height: 2.5px;
-                    width: 100%;
-                    content: "";
-                }
+                // &:before {
+                //     transition: transform .25s cubic-bezier(.25,.46,.45,.94);
+                //     transform: translateY($height / 2) scaleX(0);
+                //     border: 1px solid transparent;
+                //     transform-origin: 100% 50%;
+                //     background-color: $primary;
+                //     will-change: transform;
+                //     transition-delay: 70ms;
+                //     border-radius: 10px;
+                //     max-width: 80px;
+                //     display: block;
+                //     height: 2.5px;
+                //     width: 100%;
+                //     content: "";
+                // }
 
-
-                &:hover &:before {
-                    transform: translateY($height - 12px) scaleX(1);
-                    transform-origin: 0 50%;
-                }
+                // &:hover:before {
+                //     transform: translateY($height - 12px) scaleX(1);
+                //     transform-origin: 0 50%;
+                // }
             }
 
             &-menu {
@@ -206,7 +209,7 @@
         }
 
         // Desktop navbar settings
-        @media (max-width: $tablet) {
+        @media (min-width: $tablet) {
             &-layout {
                 padding: 0 $size;
                 display: flex;
@@ -217,27 +220,29 @@
             }
 
             &-link {
-                &:before {
-                    transition: transform .25s cubic-bezier(.25,.46,.45,.94);
-                    transform: translateY($height - 12px) scaleX(0);
-                    border: 1px solid transparent;
-                    transform-origin: 100% 50%;
-                    background-color: $primary;
-                    will-change: transform;
-                    transition-delay: 70ms;
-                    border-radius: 10px;
-                    max-width: 80px;
-                    display: block;
-                    height: 2.5px;
-                    width: 100%;
-                    content: "";
-                }
+                // &:before {
+                //     transition: transform .25s cubic-bezier(.25,.46,.45,.94);
+                //     transform: translateY($height - 12px) scaleX(0);
+                //     border: 1px solid transparent;
+                //     transform-origin: 100% 50%;
+                //     background-color: $primary;
+                //     will-change: transform;
+                //     transition-delay: 70ms;
+                //     border-radius: 10px;
+                //     max-width: 80px;
+                //     display: block;
+                //     height: 2.5px;
+                //     width: 100%;
+                //     content: "";
+                // }
 
 
-                &:hover &:before {
-                    transform: translateY($height - 12px) scaleX(1);
-                    transform-origin: 0 50%;
-                }
+                // &:hover {
+                //     &:before {
+                //         transform: translateY($height - 12px) scaleX(1);
+                //         transform-origin: 0 50%;
+                //     }
+                // }
             }
         }
     }
