--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -15,81 +15,81 @@
    }
 
    $dimension: ("width", "height");
-   @each $axis in $dimension {
-      $screenSizes: (
-         "desktop": $screen-size-desktop,
-         "laptop": $screen-size-laptop,
-         "tablet": $screen-size-tablet,
-         "phone": $screen-size-phone
-      );
+//    @each $axis in $dimension {
+//       $screenSizes: (
+//          "desktop": $screen-size-desktop,
+//          "laptop": $screen-size-laptop,
+//          "tablet": $screen-size-tablet,
+//          "phone": $screen-size-phone
+//       );
 
-      $screenSizesPX: (
-         "desktop": $desktop,
-         "laptop": $laptop,
-         "tablet": $tablet,
-         "phone": $phone
-      );
+//       $screenSizesPX: (
+//          "desktop": $desktop,
+//          "laptop": $laptop,
+//          "tablet": $tablet,
+//          "phone": $phone
+//       );
 
-    @for $sz from 0 through $desktop / 5 {
-        &-#{$axis}-#{$sz} {
-            #{$axis}: #{$sz * 5}px;
-        }
+//     @for $sz from 0 through $desktop / 10 {
+//         &-#{$axis}-#{$sz * 10} {
+//             #{$axis}: #{$sz * 10}px;
+//         }
 
-        &-max-#{$axis}-#{$sz} {
-            max-#{$axis}: #{$sz * 5}px;
-        }
-    }
+//         &-max-#{$axis}-#{$sz * 10} {
+//             max-#{$axis}: #{$sz * 10}px;
+//         }
+//     }
 
-    @for $sz from 0 through 100 {
-        &-#{$axis}%-#{$sz} {
-            #{$axis}: percentage($sz / 100);
-        }
+//     @for $sz from 0 through 100 {
+//         &-#{$axis}%-#{$sz} {
+//             #{$axis}: percentage($sz / 100);
+//         }
 
-        &-max-#{$axis}%-#{$sz} {
-            max-#{$axis}: percentage($sz / 100);
-        }
-    }
+//         &-max-#{$axis}%-#{$sz} {
+//             max-#{$axis}: percentage($sz / 100);
+//         }
+//     }
 
-      @each $device-type, $screen-size in $screenSizes {
-         &-#{$axis}-#{$device-type} {
-            #{$axis}: #{map-get($screenSizesPX, $device-type)}px;
-         }
+//       @each $device-type, $screen-size in $screenSizes {
+//          &-#{$axis}-#{$device-type} {
+//             #{$axis}: #{map-get($screenSizesPX, $device-type)}px;
+//          }
 
-         &-max-#{$axis}-#{$device-type} {
-            max-#{$axis}: #{map-get($screenSizesPX, $device-type)}px;
-         }
+//          &-max-#{$axis}-#{$device-type} {
+//             max-#{$axis}: #{map-get($screenSizesPX, $device-type)}px;
+//          }
 
-         @media #{$screen-size} {
-            &-resize-#{$axis}-#{$device-type} {
-               #{$axis}: #{map-get($screenSizesPX, $device-type)}px;
-            }
+//          @media #{$screen-size} {
+//             &-resize-#{$axis}-#{$device-type} {
+//                #{$axis}: #{map-get($screenSizesPX, $device-type)}px;
+//             }
 
-            &-resize-max-#{$axis}-#{$device-type} {
-                max-#{$axis}: #{map-get($screenSizesPX, $device-type)}px;
-            }
+//             &-resize-max-#{$axis}-#{$device-type} {
+//                 max-#{$axis}: #{map-get($screenSizesPX, $device-type)}px;
+//             }
 
-            @for $sz from 0 through $desktop / 5 {
-               &-resize-#{$axis}-#{$device-type}-#{$sz} {
-                  #{$axis}: #{$sz * 5}px;
-               }
+//             @for $sz from 0 through $desktop / 10 {
+//                &-resize-#{$axis}-#{$device-type}-#{$sz * 10} {
+//                   #{$axis}: #{$sz * 10}px;
+//                }
 
-               &-resize-max-#{$axis}-#{$device-type}-#{$sz} {
-                  max-#{$axis}: #{$sz * 5}px;
-               }
-            }
+//                &-resize-max-#{$axis}-#{$device-type}-#{$sz} {
+//                   max-#{$axis}: #{$sz * 10}px;
+//                }
+//             }
 
-            @for $sz from 0 through 100 {
-                &-resize-#{$axis}%-#{$device-type}-#{$sz} {
-                    #{$axis}: percentage($sz / 100);
-                }
+//             @for $sz from 0 through 100 {
+//                 &-resize-#{$axis}%-#{$device-type}-#{$sz} {
+//                     #{$axis}: percentage($sz / 100);
+//                 }
 
-                &-resize-max-#{$axis}%-#{$device-type}-#{$sz} {
-                    max-#{$axis}: percentage($sz / 100);
-                }
-            }
-         }
-      }
-   }
+//                 &-resize-max-#{$axis}%-#{$device-type}-#{$sz} {
+//                     max-#{$axis}: percentage($sz / 100);
+//                 }
+//             }
+//          }
+//       }
+//    }
 
    &,
    &-vert {
