--- a/src/scss/components/icon.scss
+++ b/src/scss/components/icon.scss
@@ -17,7 +17,7 @@
     &,
     &-bkg,
     &-background {
-       @include colorList(background-color);
+        @include colorList(background-color);
     }
 
     &-default {
@@ -66,33 +66,62 @@
         font-weight: 500;
         line-height: 1;
     }
+
+    &-hover,
+    &-expand {
+        .btn-section {
+            transition: max-width .6s ease 0s, opacity .4s ease 0s;
+            overflow-wrap: normal;
+            word-break: keep-all;
+            white-space: nowrap;
+            word-wrap: normal;
+            overflow: hidden;
+            display: flex;
+        }
+    }
+
+    &-hover .btn-section {
+        max-width: 0;
+        opacity: 0;
+    }
+
+    &-expand .btn-section,
+    &-hover:hover .btn-section {
+        max-width: 200px;
+        opacity: 1;
+    }
 }
 
-.icon, .material-icons {
-   -webkit-font-feature-settings: "liga" off, "dlig"; /* Ch 16-26, BB 10, And 18.0 */
-   -moz-font-feature-settings: "liga=0, dlig=1"; /* Fx 4-21 */
-   font-feature-settings: "liga", "dlig"; /* IE 10, Saf 4.0-6.0 */
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
-   text-rendering: optimizeLegibility;
-   font-family: $icon-font;
-   vertical-align: middle;
-   letter-spacing: normal;
-   display: inline-block;
-   text-decoration: none;
-   text-transform: none;
-   white-space: nowrap;
-   font-weight: normal;
-   position: relative;
-   font-style: normal;
-   word-wrap: normal;
-   line-height: 1;
-   direction: ltr;
-   height: 1em;
-   width: 1em;
+.icon,
+.material-icons {
+    -webkit-font-feature-settings: "liga"off, "dlig";
+    /* Ch 16-26, BB 10, And 18.0 */
+    -moz-font-feature-settings: "liga=0, dlig=1";
+    /* Fx 4-21 */
+    font-feature-settings: "liga", "dlig";
+    /* IE 10, Saf 4.0-6.0 */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    font-family: $icon-font;
+    vertical-align: middle;
+    letter-spacing: normal;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: none;
+    white-space: nowrap;
+    font-weight: normal;
+    position: relative;
+    font-style: normal;
+    word-wrap: normal;
+    line-height: 1;
+    direction: ltr;
+    height: 1em;
+    width: 1em;
 
-   &-btn, &-btn:hover {
-      border-radius: 20em;
-      text-decoration: none;
-   }
+    &-btn,
+    &-btn:hover {
+        border-radius: 20em;
+        text-decoration: none;
+    }
 }
