--- a/views/app.pug
+++ b/views/app.pug
@@ -160,16 +160,16 @@ html(lang="en")
         article
           .layout-flex.layout-padding-horz
             section.layout-spacer
-            section.layer-surface.layer-shadow.layer-round
-              button#back-to-top.btn.btn-hover.layer-round.layout-padding-smaller.layer-transparent.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
+            section.layer-primary-dark.layer-shadow.layer-round
+              button#back-to-top.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
                 span.btn-group
                   i.icon.style-font-sz-24 expand_less
                   span.btn-section
                     span.btn-spacer
-                    span.btn-content Back To The Top
+                    span.btn-content Back To Top
 
               if page.noFooter
-                button.copyright-btn#swup.btn.btn-hover.layer-round.layout-padding-smaller.layer-transparent.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
+                button.copyright-btn#swup.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
                   span.btn-group.style-font-sz-24
                     i.icon copyright
                     span.btn-section
