--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -50,11 +50,11 @@
         }
 
         &-title {
+            padding-left: $size-sub-large;
             font-family: $bold-font;
             letter-spacing: 0.05em;
             text-decoration: none;
             line-height: $height;
-            padding-left: $size;
             position: relative;
             font-size: 17px;
         }
@@ -80,16 +80,14 @@
             font-weight: 300;
             padding: 0 28px;
             font-size: 14px;
-            display: block;
             color: $black;
-            width: 100%;
 
             &:before {
                 transition: transform .25s cubic-bezier(.25,.46,.45,.94);
                 transform: translateY($height - 12px) scaleX(0);
+                background-color: $primary !important;
                 border: 1px solid transparent;
                 transform-origin: 100% 50%;
-                background-color: $primary;
                 will-change: transform;
                 transition-delay: 70ms;
                 border-radius: 10px;
@@ -99,7 +97,7 @@
                 content: "";
             }
 
-            &:hover {
+            &:hover, &-focus {
                 text-decoration: none;
                 color: $black;
 
@@ -110,8 +108,11 @@
             }
 
             &-focus {
-                text-decoration: underline;
-                color: $secondary;
+                color: $primary-dark;
+
+                &:before {
+                    background-color: $primary-dark;
+                }
             }
         }
 
@@ -173,21 +174,14 @@
                 padding: 0 24px;
 
                 &:before {
-                    transform: translateY(-3px) scaleX(0);
-                    display: inline-block;
-                    margin-right: 5px;
-                    max-width: 60px;
+                    transform: translateY($height - 24px) scaleX(0);
                 }
 
-                &:hover:before {
-                    transform: translateY(-3px) scaleX(1);
-                    // display: inline-block;
+                &-focus, &:hover {
+                    &:before {
+                        transform: translateY($height - 18px) scaleX(1);
+                    }
                 }
-
-                // &:hover:before {
-                //     transform: translateY($height - 12px) scaleX(1);
-                //     transform-origin: 0 50%;
-                // }
             }
 
             &-menu {
@@ -212,32 +206,6 @@
 
             &-list {
                 height: $height;
-            }
-
-            &-link {
-                // &:before {
-                //     transition: transform .25s cubic-bezier(.25,.46,.45,.94);
-                //     transform: translateY($height - 12px) scaleX(0);
-                //     border: 1px solid transparent;
-                //     transform-origin: 100% 50%;
-                //     background-color: $primary;
-                //     will-change: transform;
-                //     transition-delay: 70ms;
-                //     border-radius: 10px;
-                //     max-width: 80px;
-                //     display: block;
-                //     height: 2.5px;
-                //     width: 100%;
-                //     content: "";
-                // }
-
-
-                // &:hover {
-                //     &:before {
-                //         transform: translateY($height - 12px) scaleX(1);
-                //         transform-origin: 0 50%;
-                //     }
-                // }
             }
         }
     }
