--- a/views/app.pug
+++ b/views/app.pug
@@ -27,7 +27,7 @@ html(lang="en")
     //- link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     //- link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     //- link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
-    link(rel='manifest', href='manifest.json')
+    link(rel='manifest', href='manifest.webmanifest')
 
     meta(name='theme-color', content='#4500ff')
     meta(name='msapplication-TileColor', content='#4500ff')
