--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -24,6 +24,7 @@ mixin image(value)
           img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150`, alt=_alt inline loading="auto")
         noscript Javascript is necesscary for an amazing experience.
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
+    .layer-image-overlay
 
 
 mixin link(value)
