--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -3,139 +3,141 @@
      * ".more" = is for the learn more buttons
 */
 .layer {
-   font-family: $regular-font;
-   position: static;
-   line-height: 1.85;
-   font-size: 18px;
-   display: block;
-   width: 100%;
-   z-index: 0;
+    font-family: $regular-font;
+    position: static;
+    line-height: 1.85;
+    font-size: 18px;
+    display: block;
+    width: 100%;
+    z-index: 0;
 
-   // /* &-title {
-   //    // overflow-wrap: break-word;
-   // } */
+    // /* &-title {
+    //    // overflow-wrap: break-word;
+    // } */
 
-   &-content {
-      position: relative;
-      z-index: 25;
-   }
-
-   &-image {
-      position: absolute;
-      overflow: hidden;
-      display: block;
-      height: 100%;
-      width: 100%;
-      z-index: 0;
-      left: 0;
-      top: 0;
-
-      &-overlay {
-          position: absolute;
-          display: block;
-          opacity: 0.35;
-          height: 100%;
-          width: 100%;
-          z-index: 5;
-          left: 0;
-          top: 0;
-      }
-
-      &-blur {
-         filter: blur(3px);
-      }
-   }
-
-
-   &-shadow,
-   %shadow {
-      box-shadow: 0 40px 85px rgba(0, 0, 40, 0.3);
-
-      &--1 {
-         box-shadow: 0 20px 65px rgba(0, 0, 40, 0.12);
-      }
-
-      &--2 {
-         box-shadow: 0 10px 85px rgba(0, 0, 40, 0.35);
-      }
-   }
-
-   &-overflow-hide {
-      overflow: hidden;
-   }
-
-   &-hero {
-      // @extend %shadow;
-      // background: $surface;
-      position: relative;
-      z-index: 125;
-
-      .layer-image {
-         border-radius: 25px;
-
-         img {
-            min-width: 500px;
-         }
-      }
-
-      &-scroll-down {
-        margin-bottom: -216px;
-        background: $white;
+    &-content {
         position: relative;
-        z-index: 250;
-      }
+        z-index: 25;
+    }
 
-      .layer-title {
-        font-size: 8vmax;
-      }
+    &-image {
+        position: absolute;
+        overflow: hidden;
+        display: block;
+        height: 100%;
+        width: 100%;
+        z-index: 0;
+        left: 0;
+        top: 0;
 
-      @media (min-width: 700px) {
-         .layer-title {
-            font-size: 12vmax;
-         }
-      }
+        &-overlay {
+            position: absolute;
+            display: block;
+            opacity: 0.35;
+            height: 100%;
+            width: 100%;
+            z-index: 5;
+            left: 0;
+            top: 0;
+        }
 
-      @media (min-width: 1000px) {
-         .layer-title {
-            font-size: 12vw;
-         }
-      }
+        &-blur {
+            filter: blur(3px);
+        }
+    }
 
-      @media (min-width: 1600px) {
-         .layer-title {
-            font-size: 160px;
-         }
-      }
-   }
 
-   &,
-   &-bkg,
-   &-background {
-      @include colorList(background-color);
-   }
+    &-shadow,
+    %shadow {
+        box-shadow: 0 40px 85px rgba(0, 0, 40, 0.3);
+
+        &--1 {
+            box-shadow: 0 20px 65px rgba(0, 0, 40, 0.12);
+        }
+
+        &--2 {
+            box-shadow: 0 10px 85px rgba(0, 0, 40, 0.35);
+        }
+    }
+
+    &-overflow-hide {
+        overflow: hidden;
+    }
+
+    &-hero {
+        // @extend %shadow;
+        // background: $surface;
+        position: relative;
+        z-index: 125;
+
+        .layer-image {
+            border-radius: 25px;
+
+            img {
+                min-width: 500px;
+            }
+
+            &-overlay {
+                background-color: #58677b;
+            }
+        }
+
+        &-scroll-down {
+            margin-bottom: -216px;
+            background: $white;
+            position: relative;
+            z-index: 250;
+        }
+
+        .layer-title {
+            font-size: 8vmax;
+        }
+
+        @media (min-width: 700px) {
+            .layer-title {
+                font-size: 12vmax;
+            }
+        }
+
+        @media (min-width: 1000px) {
+            .layer-title {
+                font-size: 12vw;
+            }
+        }
+
+        @media (min-width: 1600px) {
+            .layer-title {
+                font-size: 160px;
+            }
+        }
+    }
+
+    &,
+    &-bkg,
+    &-background {
+        @include colorList(background-color);
+    }
 
     &-border {
-        $borderStyles: (
-            "solid": solid,
-            "dotted": dotted,
-            "dashed": dashed,
-            "double": double,
-            "groove": groove,
-            "ridge": ridge,
-            "inset": inset,
-            "outset": outset,
-            "hidden": hidden,
-            "none": none
-        );
-        $borderDirs: (
-            "top",
-            "left",
-            "right",
-            "bottom"
-        );
+        $borderStyles: ("solid": solid,
+                "dotted": dotted,
+                "dashed": dashed,
+                "double": double,
+                "groove": groove,
+                "ridge": ridge,
+                "inset": inset,
+                "outset": outset,
+                "hidden": hidden,
+                "none": none);
+        $borderDirs: ("top",
+                "left",
+                "right",
+                "bottom"
+            );
         border: 1px solid $mid;
 
         @for $sz from 1 through 10 {
+
             &-#{$sz},
             &-sz-#{$sz},
             &-wid-#{$sz},
@@ -145,6 +147,7 @@
         }
 
         @for $sz from 1 through 20 {
+
             &-rad-#{$sz},
             &-radius-#{$sz} {
                 border-radius: #{$sz}px;
@@ -163,8 +166,10 @@
                 @include propertyList(border-width-#{$val}, "sz", $sizes);
                 @include propertyList(border-style-#{$val}, "style", $borderStyles);
             }
+
             @each $otherVal in $borderDirs {
                 @for $sz from 1 through 20 {
+
                     &-rad-#{$val}-#{$otherVal}-#{$sz},
                     &-radius-#{$val}-#{$otherVal}-#{$sz} {
                         border-radius-#{$val}-#{$otherVal}: #{$sz}px;
@@ -174,60 +179,61 @@
                 @include propertyList(border-radius-#{$val}-#{$otherVal}, "rad-#{$val}-#{$otherVal}", $sizes);
                 @include propertyList(border-radius-#{$val}-#{$otherVal}, "radius-#{$val}-#{$otherVal}", $sizes);
             }
+
             @include colorList(border-color-#{$val}, "color-#{$val}");
             @include propertyList(border-width-#{$val}, "sz-#{$val}", $sizes);
             @include propertyList(border-style-#{$val}, "style-#{$val}", $borderStyles);
         }
     }
 
-	&-round {
+    &-round {
         border-radius: 20em;
-	}
+    }
 
-   &-tile {
-      position: relative;
-      min-height: 300px;
-      cursor: pointer;
-      display: block;
-      width: 100%;
+    &-tile {
+        position: relative;
+        min-height: 300px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
 
-      &,
-      .layer-image {
-         overflow: hidden;
-      }
+        &,
+        .layer-image {
+            overflow: hidden;
+        }
 
-      &-footer {
-         position: absolute;
-         color: $white;
-         margin: 20px 25px;
-         bottom: 0;
-      }
-   }
+        &-footer {
+            position: absolute;
+            color: $white;
+            margin: 20px 25px;
+            bottom: 0;
+        }
+    }
 
-   &-box {
-      position: relative;
-      min-height: 400px;
-      height: auto;
-      width: 100%;
+    &-box {
+        position: relative;
+        min-height: 400px;
+        height: auto;
+        width: 100%;
 
-      &,
-      .layer-image {
-         border-radius: 8px;
-      }
+        &,
+        .layer-image {
+            border-radius: 8px;
+        }
 
-      &-flat {
-         border-radius: 0 !important;
-      }
+        &-flat {
+            border-radius: 0 !important;
+        }
 
-      &-tall {
-         min-height: 800px;
-      }
-   }
+        &-tall {
+            min-height: 800px;
+        }
+    }
 
-   &-main {
-      line-height: 2em;
-      z-index: 25;
-   }
+    &-main {
+        line-height: 2em;
+        z-index: 25;
+    }
 
     &-action-center {
         transition: opacity .4s ease 0s;
