--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -31,6 +31,7 @@
         top: 0;
 
         &-overlay {
+            background: #473eca;
             position: absolute;
             display: block;
             opacity: 0.15;
