--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,15 +1,15 @@
 /* -- Header -- */
 .header {
-   $height: 60px;
+    $height: 60px;
 
-   position: relative;
-   display: block;
+    position: relative;
+    display: block;
 
-   &-top-spot {
-       height: $height + $size;
-   }
+    &-top-spot {
+        height: $height + $size;
+    }
 
-   /* -- Navigation -- */
+    /* -- Navigation -- */
     @at-root .navbar {
         position: relative;
         max-height: 1000px;
@@ -33,7 +33,9 @@
             margin: 0 auto;
         }
 
-        &-focus, &-show, &:hover {
+        &-focus,
+        &-show,
+        &:hover {
             .navbar-layout {
                 box-shadow: 0 5px 25px rgba(0, 0, 50, 0.12);
                 background: $surface;
@@ -47,6 +49,15 @@
             align-items: center;
             flex-wrap: nowrap;
             display: flex;
+        }
+
+        &-logo {
+            width: 18px;
+            min-height: 18px;
+            display: inline-block;
+            transform: translateY(2px);
+            margin-right: 8px;
+            fill: aqua;
         }
 
         &-title {
@@ -83,7 +94,7 @@
             color: $black;
 
             &:before {
-                transition: transform .25s cubic-bezier(.25,.46,.45,.94);
+                transition: transform .25s cubic-bezier(.25, .46, .45, .94);
                 transform: translateY($height - 12px) scaleX(0);
                 background-color: $primary !important;
                 border: 1px solid transparent;
@@ -97,7 +108,8 @@
                 content: "";
             }
 
-            &:hover, &-focus {
+            &:hover,
+            &-focus {
                 text-decoration: none;
                 color: $black;
 
@@ -126,6 +138,7 @@
 
         // Mobile navbar settings
         @media #{$screen-size-tablet} {
+
             &-layout,
             &-list {
                 flex-direction: column;
@@ -177,7 +190,8 @@
                     transform: translateY($height - 24px) scaleX(0);
                 }
 
-                &-focus, &:hover {
+                &-focus,
+                &:hover {
                     &:before {
                         transform: translateY($height - 18px) scaleX(1);
                     }
