--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -17,9 +17,10 @@ mixin header(_page)
         section.navbar-head
           +link({
             href: "/" + (dev ? "index.html" : "index"),
-            class: "navbar-title style-primary style-primary-dark-hover style-primary-focus",
-            content: "JOSEPH!"
+            class: "navbar-title style-primary style-primary-dark-hover style-primary-focus"
           })
+            img.navbar-logo(src="/assets/gear-svg-icon-logo.svg" inline)
+            span JOSEPH!
           section.layout-spacer
           section.navbar-foot.navbar-mobile
             section.layout-inline-block
