--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -13,38 +13,40 @@ mixin header(_page)
 
   header.header
     nav.navbar.navbar-fixed
-      article.layout-contain-large.navbar-layout.layout-flex
-        section.navbar-head
-          +link({
-            href: "/" + (dev ? "index.html" : "index"),
-            class: "navbar-title style-primary style-primary-dark-hover style-primary-focus"
-          })
-            img.navbar-logo(src="/assets/gear-svg-icon-logo-color.svg" inline)
-            span.navbar-title-line
-            span JOSEPH!
-          section.layout-spacer
-          section.navbar-foot.navbar-mobile
-            section.layout-inline-block
-              //- +install
-            section.layout-inline-block
-              button.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary(tabindex='-1', type='button' title="Menu Bar")
-                span.btn-group
-                  i.navbar-menu.icon.style-font-family-bold.style-font-sz-24 menu
+      article.layout-contain-large.navbar-layout
+        div.layout-flex
+          section.navbar-head
+            +link({
+              href: "/" + (dev ? "index.html" : "index"),
+              class: "navbar-title style-primary style-primary-dark-hover style-primary-focus"
+            })
+              img.navbar-logo(src="/assets/gear-svg-icon-logo-color.svg" inline)
+              span.navbar-title-line
+              span JOSEPH!
+            section.layout-spacer
+            section.navbar-foot.navbar-mobile
+              section.layout-inline-block
+                //- +install
+              section.layout-inline-block
+                button.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary(tabindex='-1', type='button' title="Menu Bar")
+                  span.btn-group
+                    i.navbar-menu.icon.style-font-family-bold.style-font-sz-24 menu
 
-        section.layout-spacer.navbar-desktop
-        section.navbar-main
-          //- .layout-flex.layout-align-items-center
-          ul.navbar-list#swup
-            each tab in _tabs
-              - let _link = tab.a;
-              - let _href = _link.href;
-              - let _content = _link.content;
-              - let _class = _name == _content ? "navbar-link-focus" : "";
+          section.layout-spacer.navbar-desktop
+          section.navbar-main
+            //- .layout-flex.layout-align-items-center
+            ul.navbar-list#swup
+              each tab in _tabs
+                - let _link = tab.a;
+                - let _href = _link.href;
+                - let _content = _link.content;
+                - let _class = _name == _content ? "navbar-link-focus" : "";
 
-              li
-                a.navbar-link(href=_href class=_class data-swup-preload)
-                  span.navbar-link-content= _content
-            //- li.navbar-desktop
-              +install
-                  span.btn-spacer
-                  span.btn-content Install
+                li
+                  a.navbar-link(href=_href class=_class data-swup-preload)
+                    span.navbar-link-content= _content
+              //- li.navbar-desktop
+                +install
+                    span.btn-spacer
+                    span.btn-content Install
+        div.navbar-shadow
